--- a/src/components/DataGrid/subComponents/styles/progressStyle.css
+++ b/src/components/DataGrid/subComponents/styles/progressStyle.css
@@ -1,16 +1,40 @@
-.progressbar-wrapper {
-  width: 100%;
-  height: 100%;
+.progressView button {
+  padding: 4px 10px;
+  border: none;
+  background-color: yellowgreen;
+  border-radius: 5px 0px;
   color: black;
+}
+.wrapper {
+  width: 200px;
+  max-height: 200px;
+  overflow-y: auto;
+  background-color: #fff;
+  padding: 10px;
+  box-sizing: border-box;
   border: 1px solid #ddd;
-  border-radius: 10px;
+  text-align: center;
+}
+.wrapper .progress-container {
+  height: auto;
+  width: auto;
+}
+.progressbar-wrapper {
+  color: black;
   overflow: hidden;
   position: relative;
+  height: 20px;
+  border: 1px solid #ddd;
+  width: 100%;
+}
+.ag-cell-inline-editing {
+  overflow: unset !important;
 }
 .progressText {
   position: absolute;
   top: 0;
   left: 0;
+  line-height: 20px;
   text-align: center;
   height: 100%;
   width: 100%;
